<resources>
    <string name="app_name">Geo_slam</string>
    <string name="status_title">Statut système</string>
    <string name="section_sensors">Capteurs</string>
    <string name="section_system">Système</string>
    <string name="metric_battery">Batterie</string>
    <string name="metric_ram">RAM libre</string>
    <string name="metric_temp">Temp. CPU</string>
    <string name="btn_start">Démarrer la localisation</string>
    <string name="btn_calibrate">Calibrer l\'IMU</string>
    <string name="refresh">Rafraîchir</string>
    <string name="splash_subtitle">Localisation industrielle hybride</string>

    <string name="map_title">Localisation</string>
    <string name="status_running">En cours</string>
    <string name="mode_foot">FootSLAM</string>
    <string name="mode_fusion">Fusion</string>
    <string name="mode_vslam">vSLAM</string>
    <string name="legend_foot">FootSLAM (IA)</string>
    <string name="legend_vslam">vSLAM (Vision)</string>
    <string name="legend_fusion">Fusion (Hybride)</string>
    <string name="legend_position">Ma Position</string>
    <string name="btn_stop">Arrêter</string>
    <string name="btn_save">Sauvegarder</string>
    <string name="section_mode">Mode de localisation</string>
    <string name="section_legend">Légende</string>
    <string name="map_subtitle">Localisation en temps réel</string>
    <string name="mode_label">Mode actif</string>
</resources>